--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProyectoFinal</title>
+  <title>Natalia-Brito</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Rufina:wght@700&display=swap');
+  </style>
 </head>
 <body>
   <app-root></app-root>
